; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_varasm.c_assemble_constant_contents.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_varasm.c_assemble_constant_contents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@asm_out_file = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @assemble_constant_contents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assemble_constant_contents(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @get_constant_size(i32 %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* @asm_out_file, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @ASM_OUTPUT_LABEL(i32 %10, i8* %11)
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @output_constant(i32 %13, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @get_constant_size(i32) #1

declare dso_local i32 @ASM_OUTPUT_LABEL(i32, i8*) #1

declare dso_local i32 @output_constant(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
